--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
+    "redux-devtools": "^2.1.5"
   },
   "directories": {
     "example": "example"
